# rust-tmx

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: error.rs  layer.rs  lib.rs  map.rs  metadata.rs  tileset.rs  to_json.rs
tests/: tests.rs
