[package]
name = "tmx"
version = "0.1.2"
authors = ["adtennant <alex@adtennant.co.uk>"]
edition = "2018"
description = "TMX is a library for loading [Tiled](https://mapeditor.org) maps in Rust"
documentation = "https://docs.rs/tmx"
homepage = "https://github.com/adtennant/rust-tmx"
repository = "https://github.com/adtennant/rust-tmx.git"
readme = "README.md"
keywords = ["tmx", "tiled", "map"]
categories = ["game-development"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde =  { version = "1.0.106", features = ["serde_derive"] }
serde-xml-rs = "0.4.0"
serde-aux = "0.6.1"
base64 = { version = "0.12.0", optional = true }
libflate = { version = "0.1.27", optional = true }
zstd = { version = "0.5.1", optional = true }
thiserror = "1.0.16"

[features]
default = ["base64-data", "gzip-data", "zlib-data", "zstd-data"]
base64-data = ["base64"]
gzip-data = ["base64-data", "libflate"]
zlib-data = ["base64-data", "libflate"]
zstd-data = ["base64-data", "zstd"]
