[package]
name = "tmx"
version = "0.2.0"
authors = ["adtennant <alex@adtennant.co.uk>"]
edition = "2018"
description = "TMX is a library for loading [Tiled](https://mapeditor.org) maps in Rust"
repository = "https://github.com/adtennant/rust-tmx.git"
readme = "README.md"
keywords = ["tmx", "tiled", "map"]
categories = ["game-development"]
license = "MIT"

[dependencies]
serde =  { version = "1.0.106", features = ["serde_derive"] }
serde-aux = "0.6.1"
serde_json = "1.0.52"
thiserror = "1.0.16"

base64 = { version = "0.12.0", optional = true }
libflate = { version = "0.1.27", optional = true }
quick-xml = { version = "0.18.1", optional = true }
zstd = { version = "0.5.1+zstd.1.4.4", optional = true }

[features]
default = ["xml", "base64-data", "gzip-data", "zlib-data", "zstd-data"]

xml = ["quick-xml"]

base64-data = ["base64"]
gzip-data = ["base64-data", "libflate"]
zlib-data = ["base64-data", "libflate"]
zstd-data = ["base64-data", "zstd"]
